init: 기존 작업 전체 저장
# Conflicts:
#	.metadata
#	android/gradle/wrapper/gradle-wrapper.properties
#	android/settings.gradle.kts
#	ios/Runner.xcodeproj/project.pbxproj
#	ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
#	ios/Runner.xcworkspace/contents.xcworkspacedata
#	ios/Runner/Info.plist
#	lib/main.dart
#	lib/models/user_model.dart
#	lib/screens/goal_setting_screen.dart
#	lib/screens/signup_screen.dart
#	lib/services/api_service.dart
#	lib/services/auth_service.dart
#	lib/utils/crypto_utils.dart
#	macos/Flutter/GeneratedPluginRegistrant.swift
#	pubspec.lock
#	pubspec.yaml
#	windows/flutter/generated_plugins.cmake

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>이 앱은 음식 사진을 촬영하기 위해 카메라 접근 권한이 필요합니다.</string>
 </dict>
 </plist>
